# TcNo-Acc-Switcher

./: .codex-state-matrix-rerun.json  .gitignore  .gitmodules  AUDIT_DONE.md  CONTRIBUTING.md  DISCLAIMER.md  Directory.Build.props  GameStats.json  NOTES.txt  OPEN_SOURCE_LICENSES.txt  PRIVACY  PRIVACY.md  Platforms.json  README.md  Requirements.txt  TCNO-Acc-Switcher.sln  Taskfile.yml  TcNo-Acc-Switcher.sln  TcNo-Acc-Switcher.sln.DotSettings  appveyor.yml  appveyor.yml.disabled  assets_http.go  changes.md  crowdin.yml  dotnet-desktop.yml  embed_gamestats.go  embed_platforms.go  filesystemservice.go  go.mod  go.sum  main.go  main_test.go  results.md  toast.go  updater-key.pub  updateversion.ps1  upload-to-ftp.py  wails.json
.github/: FUNDING.yml
.run/: Publish TcNo-Acc-Switcher to folder.run.xml
Current/: .editorconfig  .gitignore  CONTRIBUTING.md  README.md  TcNo-Acc-Switcher.sln
Debug/: TCNO-Acc-Switcher.ilk
Installer/: Installer.cpp  Installer.rc  Installer.vcxproj  Installer.vcxproj.filters  packages.config  (+6 more)
TcNo-Acc-Switcher-Updater-rs/: .gitignore  Cargo.toml  README.md  build.rs  updater.manifest
TcNo-Acc-Switcher-Updater-rs/.cargo/: config.toml
TcNo-Acc-Switcher-Updater-rs/src/: logger.rs  main.rs
TcNo-Acc-Switcher-Updater-rs/src/archive/: mod.rs
TcNo-Acc-Switcher-Updater-rs/src/gui/: app.rs  mod.rs
TcNo-Acc-Switcher-Updater-rs/src/patch/: mod.rs
TcNo-Acc-Switcher-Updater-rs/src/updater/: mod.rs
TcNo-Acc-Switcher-Updater-rs/src/utils/: mod.rs
TcNo-Acc-Switcher-Updater-rs/src/windows/: mod.rs
TcNo-Acc-Switcher-Updater-rs/ui/: main.slint
(+1711 files in other folders)
