[package]
name = "tcno-acc-switcher-updater"
version = "0.1.0"
edition = "2021"
authors = ["TroubleChute (Wesley Pyburn)"]
description = "Updater for the TcNo Account Switcher"
license = "GPL-3.0"
repository = "https://github.com/TCNOCo/TcNo-Acc-Switcher"

[dependencies]
# GUI
eframe = "0.27"
egui = "0.27"

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["blocking", "json", "stream"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Archive handling
zip = "0.6"
sevenz-rust = "0.1.5"

# Hashing
md5 = "0.7"
sha2 = "0.10"

# File operations
walkdir = "2.5"

# Command line parsing
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Windows API
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Security",
    "Win32_System_ProcessStatus",
] }

# Utilities
once_cell = "1.20"
parking_lot = "0.12"
chrono = "0.4"
dirs = "5.0"
uuid = { version = "1.10", features = ["v4"] }
log = "0.4"
env_logger = "0.11"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "handleapi", "synchapi", "securitybaseapi", "shellapi"] }

